fixed footer-nav overlap via z index

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
   background: #f4f2f5;
   display: flex;
   position: sticky;
-  z-index: 100;
+  z-index: 1001;
   top: 0px;
   justify-content: space-between;
   align-items: center;
